--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,7 +43,7 @@
             <div id="chart_div" style="width: 450px; height: 250px">
             </div>
 
-            <h2 id="main-headers">Bitcoin</h2>
+            <!-- <h2 id="main-headers">Bitcoin</h2>
             <div class="wide-card mdl-card mdl-shadow--8dp">
                 <div class="mdl-card__title">
                     <h2 class="mdl-card__title-text"></h2>
@@ -53,7 +53,7 @@
                 <div class="mdl-card__actions mdl-card--border">
                     <br>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
